--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "./work/TrsServer.js",
+  "main": "./work/CsfServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./work/TrsServer.js",
-    "start_azure_debug": "node --inspect=0.0.0.0:$APPSVC_TUNNEL_PORT ./work/TrsServer.js",
-    "dev": "nodemon ./work/TrsServer.js"
+    "start": "node ./work/CsfServer.js",
+    "start_azure_debug": "node --inspect=0.0.0.0:$APPSVC_TUNNEL_PORT ./work/CsfServer.js",
+    "dev": "nodemon ./work/CsfServer.js"
   },
   "keywords": [],
   "author": "",
